fix: waypoint icon not showing bottom left

--- a/src/map.css
+++ b/src/map.css
@@ -181,11 +181,10 @@
 	width: 1rem;
 	height: 1rem;
 	margin-right: 0.5rem;
+	transition: transform 0.2s ease-out;
 }
 
-.mouse-position > input:last-of-type {
-	width: 1rem;
-	height: 1rem;
+.mouse-position > img:last-of-type {
 	margin-left: 0.5rem;
 	margin-right: 0rem;
 }
@@ -200,8 +199,8 @@
 	cursor: pointer;
 }
 
-.waypoint-position:hover > input:last-of-type {
-	transform: scale(1.1);
+.waypoint-position:hover > img:last-of-type {
+	transform: scale(1.3);
 }
 
 /* Fix for mobile devices */
